argocd/infrastructure/argocd-config/argocd-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
  # HTTP server to redirect to HTTPS
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - argocd.whispr.epitech-msc2026.me
    tls:
      httpsRedirect: true
  # HTTPS server
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: argocd-cert
    hosts:
    - argocd.whispr.epitech-msc2026.me
