argocd/infrastructure/argocd-config/virtual-service.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: istio-system
spec:
  hosts:
  - argocd.whispr.epitech-msc2026.me
  gateways:
  - argocd-gateway

  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local  # Full FQDN for cross-namespace
        port:
          number: 80
    headers:
      request:
        add:
          x-forwarded-proto: https
          x-forwarded-ssl: "on"
